create-license/main/default/objects/Lead/fields/Replicated_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Replicated_Customer_Id__c</fullName>
    <description>Replicated customer ID (set on customer.created webhook)</description>
    <externalId>true</externalId>
    <label>Replicated Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>