create-license/main/default/objects/Lead/fields/Replicated_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Replicated_License_Expiry__c</fullName>
    <description>Replicated license expiration date</description>
    <label>Replicated License Expiry</label>
    <type>Date</type>
</CustomField>