create-license/main/default/objects/Lead/fields/Replicated_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Replicated_License_Type__c</fullName>
    <description>Replicated license type (trial, paid, community)</description>
    <label>Replicated License Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>